# permanganate

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh
lib/: Cargo.toml
lib/src/: basic.rs  board.rs  builder.rs  cell.rs  common.rs  graph.rs  lib.rs  location.rs  logic.rs  shape.rs  solver.rs  tests.rs
lib/src/common/: affiliation.rs  cell.rs  location.rs  logic.rs  mod.rs  shape.rs
solver/: Cargo.toml
solver/src/: main.rs
src/: affiliation.rs  board.rs  builder.rs  cell.rs  lib.rs  location.rs  shape.rs  solver.rs  tests.rs  wasm.rs
